force-app/main/default/objects/Forensic_Report__c/Forensic_Report__c.object-meta.xml
<CustomObject>
    <label>Forensic Report</label>
    <nameField>
        <displayFormat>FR-{0}</displayFormat>
        <label>Forensic Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forensic Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>