force-app/main/default/objects/Forensic_Report__c/fields/Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Type__c</fullName>
    <label>Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Medical Record Created</fullName>
            </value>
            <value>
                <fullName>Discovery Record Completion</fullName>
            </value>
            <value>
                <fullName>Testimony</fullName>
            </value>
            <value>
                <fullName>Snapshot</fullName>
            </value>
            <value>
                <fullName>Medical Record Review</fullName>
            </value>
            <value>
                <fullName>Preliminary Statement</fullName>
            </value>
            <value>
                <fullName>Final Statement</fullName>
            </value>
            <value>
                <fullName>Video Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>