force-app/main/default/objects/Forensic_Report__c/fields/Testimony_ADA__c.field-meta.xml
<CustomField>
    <fullName>Testimony_ADA__c</fullName>
    <label>Testimony ADA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>