force-app/main/default/objects/Forensic_Report__c/fields/Testimony_Outcome_Issues__c.field-meta.xml
<CustomField>
    <fullName>Testimony_Outcome_Issues__c</fullName>
    <label>Testimony Outcome/Issues</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>