force-app/main/default/objects/Forensic_Report__c/fields/Testimony_Type__c.field-meta.xml
<CustomField>
    <fullName>Testimony_Type__c</fullName>
    <label>Testimony Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Posting</fullName>
            </value>
            <value>
                <fullName>Grand Jury</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Sentencing</fullName>
            </value>
            <value>
                <fullName>Restitution</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>