force-app/main/default/objects/Forensic_Report__c/fields/Testimony_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Testimony_Type_Other__c</fullName>
    <label>Testimony Type - Other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>