force-app/main/default/objects/Forensic_Report__c/fields/Testimony_Witness__c.field-meta.xml
<CustomField>
    <fullName>Testimony_Witness__c</fullName>
    <label>Testimony Witness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>